--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Calculator</title>
+  <head>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
-
-
-</head>
-<body>
-    <div class="calculator">
-        <input type="text" id="result" readonly>
-        <div class="buttons">
-            <button onclick="clearResult()">C</button>
-            <button onclick="deleteLastChar()">&#9003;</button>
-            <button onclick="appendChar('/')">&#247;</button>
-            <button onclick="appendChar('*')">&#215;</button>   
-            <button onclick="appendChar('+')">&#43;</button>
-            <button onclick="appendChar('-')">&#8722;</button>
-            <button onclick="appendChar('9')">9</button>
-            <button onclick="appendChar('8')">8</button>
-            <button onclick="appendChar('7')">7</button>
-            <button onclick="appendChar('6')">6</button>
-            <button onclick="appendChar('5')">5</button>
-            <button onclick="appendChar('4')">4</button>
-            <button onclick="appendChar('3')">3</button>
-            <button onclick="appendChar('2')">2</button>
-            <button onclick="appendChar('1')">1</button>
-            <button onclick="appendChar('0')">0</button>
-            <button onclick="appendChar('.')">.</button>
-            <button onclick="calculateResult()">=</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>My Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, my name is John and I am a web developer...</p>
+      </section>
+      <section id="projects">
+        <h2>My Projects</h2>
+        <ul>
+          <li><a href="#">Project 1</a></li>
+          <li><a href="#">Project 2</a></li>
+          <li><a href="#">Project 3</a></li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>Contact Me</h2>
+        <form>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message"></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 John Doe</p>
+    </footer>
+  </body>
 </html>
