--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
             </ul>
         </nav>
         <div class="detel">
-            <h1>I,M Mukesh<span>Gupta</span></h1>
+            <h1>I,M Mukesh<span> Gupta</span></h1>
             <p>This is my official Portfolio website to showcase my 
                 all works related to <br> web development and ui design. </p>
             <a href="#">Downdload CV</a>
         </div>
         <div class="images">
             <img src="images/shape.png" class="shape">
-            <img src="https://drive.google.com/file/d/1132Y52YeBpOG_k1wH2xXxkKIfbRovqMH/view?usp=sharing" class="girl">
+            <img src="https://drive.google.com/file/d/1132Y52YeBpOG_k1wH2xXxkKIfbRovqMH/view?usp=sharing" alt="girl">
+
         </div>
 
         <div class="social">
